--- a/blog.css
+++ b/blog.css
@@ -162,7 +162,7 @@ h3[id^="lemma"] {
 }
 
 .collapse{
-    background-color: #ABBAEA;
+    background-color: #ffe5e3;
     border:1px solid black;
 }
 
