--- a/blog.css
+++ b/blog.css
@@ -164,6 +164,8 @@ h3[id^="lemma"] {
 .collapse{
     background-color: #ffe5e3;
     border:1px solid black;
+    padding-left: 5px;
+    margin-left: 5px;
 }
 
     	
