--- a/blog.css
+++ b/blog.css
@@ -152,6 +152,8 @@ h3[id^="lemma"] {
 
 .algorithm{
     border:1px solid black;
+    margin-left: 5px;
+    padding-left: 5px;
 }
 .intuition{
     color: purple;
