--- a/blog.css
+++ b/blog.css
@@ -22,6 +22,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
     /* text-decoration: none; */
     /* color: #218001; */
 }
+
+.container{
+
+    border:  solid;
+}
+
 h1, h2, h3, h4, h5 { font-family: verdana;
 		     font-weight: bold;
 		     /* border-bottom: 1px dotted black; */
@@ -143,7 +149,10 @@ h3[id^="lemma"] {
 }
 
 .lemma{
-    color: orange;
+  z-index: 1;
+  padding-left: 10px;
+  border: 1px solid #900;
+  background-color: #fdd;
 }
 
 .theorem{
