--- a/Crypto/crypto.css
+++ b/Crypto/crypto.css
@@ -148,8 +148,8 @@ dd p {
 }
 
 .theorem{
-    color:  #f7efda;    
-    background-color: #4d4b49;
+    color:  #3f4040;    
+    background-color: #e6ffff;
     border:1px solid black;
     margin-left: 5px;
     padding-left: 5px;
